<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add_application">Add application</string>
    <string name="add_playlist_error">Select a song.</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="added_to_album_successfully">"'%1$s' was successfully added to your favourite albums."</string>
    <string name="added_to_artist_successfully">Artist added to favourites.</string>
    <string name="added_to_favorites">Added to your favorites.</string>
    <string name="added_to_playlist">Added to your playlist</string>
    <string name="added_to_playlist_successfully">"'%1$s' was successfully added to playlist '%2$s'."</string>
    <string name="added_to_queue">Added to queue</string>
    <string name="advanced_description">Advanced features</string>
    <string name="alarm">Alarm</string>
    <string name="alarm_and_timer_description">You can turn on and off Music Flow at a designated time.</string>
    <string name="alarm_description">Music Flow will let you know when it is time.</string>
    <string name="alarm_select_speaker">Select a speaker</string>
    <string name="alarm_warning_comment">You can set up to seven alarms for each speaker.</string>
    <string name="alarms">Alarm</string>
    <string name="albums">Albums</string>
    <string name="all_songs">All music</string>
    <string name="app_exit">Exit</string>
    <string name="app_name">Music Flow Player</string>
    <string name="app_update_description">"The application needs to be updated for efficient use.
Do you want to update the software?"</string>
    <string name="app_version">App version info.</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="arc">HDMI(ARC)</string>
    <string name="arc_new">ARC</string>
    <string name="artist_unknown">Unknown Artist</string>
    <string name="artists">Artists</string>
    <string name="auto">Auto</string>
    <string name="auto_display">Auto Display On/Off</string>
    <string name="auto_display_description">Inactivity will cause the display to turn off automatically.</string>
    <string name="auto_music_play">Auto Music Play</string>
    <string name="auto_music_play_adjust">Sensitivity Settings</string>
    <string name="auto_music_play_adjust_description">You can set the Auto Music Play operating range of the Music Flow and smart device by adjusting the sensitivity of the smart device Bluetooth.</string>
    <string name="auto_music_play_adjust_detected">The speaker is detected.</string>
    <string name="auto_music_play_adjust_help_faq_a1">Find a suitable level and set by adjusting the sensitivity toward weak.</string>
    <string name="auto_music_play_adjust_help_faq_a2">Set the sensitivity toward strong and try again.</string>
    <string name="auto_music_play_adjust_help_faq_q1">If the Auto Music Play works even when the smart device is away from the speakers?</string>
    <string name="auto_music_play_adjust_help_faq_q2">If the Auto Music Play does not work normally even when the smart device is close to the speakers?</string>
    <string name="auto_music_play_adjust_help_text1">You can set the Auto Music Play operating range of the Music Flow and smart device by adjusting the sensitivity of the smart device Bluetooth.</string>
    <string name="auto_music_play_adjust_help_text2">Try adjusting the sensitivity settings for your smart device and the Music Flow.</string>
    <string name="auto_music_play_adjust_help_title">Sensitivity Settings</string>
    <string name="auto_music_play_adjust_not_detected">Speaker is not detected.</string>
    <string name="auto_music_play_adjust_tip1">Tip! If the speaker is not detected,</string>
    <string name="auto_music_play_adjust_tip2">please move the smart device closer to the speaker.</string>
    <string name="auto_music_play_bluetooth_request_message">"To use the auto music play function, Bluetooth should be turned on.
Would you like to turn on Bluetooth?"</string>
    <string name="auto_music_play_closer">Weak</string>
    <string name="auto_music_play_description">It plays the audio currently playing by tagging the mobile to LG Music Flow.</string>
    <string name="auto_music_play_farther">Strong</string>
    <string name="auto_music_play_gesture">Gesture</string>
    <string name="auto_music_play_gesture_description">If you shake the smart device, the music playing on the speakers will switch to the smart device.</string>
    <string name="auto_music_play_guide">It is the function to tag the mobile device to LG Music Flow to continuously play the music played in other LG Music Flow or mobile devices.</string>
    <string name="auto_music_play_normal">Normal</string>
    <string name="auto_music_play_usage1">Turn on Bluetooth function in mobile setting.</string>
    <string name="auto_music_play_usage2">Tag the mobile to LG Music Flow to play for about 1 second.</string>
    <string name="auto_music_play_usage3">But, the mobile device should support low power Bluetooth(BLE).</string>
    <string name="auto_music_play_usage_title">How to use</string>
    <string name="auto_power">Auto Power On/Off</string>
    <string name="auto_power_description">Sound Bar is turned on and off according to TV status.</string>
    <string name="auto_volume">Auto Volume On/Off</string>
    <string name="auto_volume_description">It prevents sudden increase of volume.</string>
    <string name="aux">AUX</string>
    <string name="aux_new">AUX</string>
    <string name="av_sync">AV Sync</string>
    <string name="balance">Balance</string>
    <string name="bass">Bass</string>
    <string name="battery">Remaining battery</string>
    <string name="beyond_pod">BeyondPod</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_new">Bluetooth</string>
    <string name="bluetooth_turning_on">Turning on Bluetooth…</string>
    <string name="bluray_disc_home_theater_system">Blu-ray Disc Home Theater</string>
    <string name="bluray_disc_player">Blu-ray Disc Player</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="bridge">"Bridge "</string>
    <string name="bt_connect">It has been paired with %s.</string>
    <string name="deezer_add_to_favorite">Add to favourites</string>
    <string name="deezer_add_to_playlist">Add to a playlist</string>
    <string name="deezer_add_to_tracks_you_love">Add to Favourite tracks</string>
    <string name="deezer_album_page">Album Page</string>
    <string name="deezer_artist_page">Artist Page</string>
    <string name="deezer_remove_from_favorite">Remove from favourites</string>
    <string name="deezer_remove_from_library">Remove from Library</string>
    <string name="deezer_remove_from_tracks_you_love">Remove from Favourite tracks</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="group_compress_auto_description">It transmits by adjusting the compression ratio automatically according to the network status.</string>
    <string name="group_compress_description_tip">The sound-quality may degrade because of the compressed transmission.</string>
    <string name="group_none_compress">Non-compression</string>
    <string name="juke_add_to_my_music">Add to My Music</string>
    <string name="juke_add_to_playlist">Add to playlist</string>
    <string name="juke_add_to_queue">Add to queue</string>
    <string name="juke_go_to_album">Go to album</string>
    <string name="juke_go_to_artist">Go to artist</string>
    <string name="juke_play_next">Play next</string>
    <string name="juke_play_now">Play now</string>
    <string name="juke_remove_from_my_music">Remove from My Music</string>
    <string name="juke_remove_from_playlist">Remove from Playlist</string>
    <string name="juke_remove_playlist">Remove</string>
    <string name="juke_rename_playlist">Rename Playlist</string>
    <string name="label_add_favorite">Add to Favorites</string>
    <string name="label_add_to_playlist">Add to playlist</string>
    <string name="label_dislike">Dislike</string>
    <string name="label_like">Like</string>
    <string name="play">Play</string>
    <string name="play_next">Play next</string>
    <string name="rhapsody_add_to_library">Add to Library</string>
    <string name="setup_sound_bar_common_guide">"3. Set TV sound output to external speaker.
(For details, refer to TV manual)"</string>
    <string name="setup_sound_bar_hdmi_description_01">@string/setup_sound_bar_optical_description_01</string>
    <string name="setup_sound_bar_hdmi_description_02">2. Connect HDMI cable to the back of the TV and the SoundBar, and turn on the power of the TV.</string>
    <string name="setup_sound_bar_hdmi_description_03">"[Tip] Connect TV HDMI(ARC) In connector and sound bar's HDMI(ARC) Out connector. "</string>
    <string name="spotify">Spotify</string>
    <string name="apple_music">Apple Music</string>
    <string name="youtube">YouTube</string>
    <string name="youtube_music">YouTube Music</string>
    <string name="home_no_speakers">No speakers connected yet.</string>
    <string name="home_add_speaker">ADD</string>
    <string name="home_greet_prefix">Good</string>
    <string name="home_greet_afternoon">Afternoon</string>
    <string name="home_greet_sub">Your sound, your space</string>
    <string name="home_my_speaker">My Speaker</string>
    <string name="home_stream_music">Stream Music</string>
    <string name="home_see_all">See All</string>
    <string name="home_settings">Settings</string>
    <string name="home_banner_kicker">BETTER TOGETHER</string>
    <string name="home_banner_title">Immersive Sound</string>
    <string name="home_banner_title2">for Every Moment</string>
    <string name="home_banner_sub">Control. Stream. Enjoy.</string>
</resources>