<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@id/play" android:title="@string/play" app:showAsAction="never" />
    <item android:id="@id/play_next" android:title="@string/play_next" app:showAsAction="never" />
    <item android:id="@id/add_to_now_playing_list" android:title="@string/add_to_queue" app:showAsAction="never" />
    <item android:id="@id/add_to_tracks_you_love" android:title="@string/deezer_add_to_tracks_you_love" app:showAsAction="never" />
    <item android:id="@id/remove_from_tracks_you_love" android:title="@string/deezer_remove_from_tracks_you_love" app:showAsAction="never" />
    <item android:id="@id/add_to_favorite" android:title="@string/deezer_add_to_favorite" app:showAsAction="never" />
    <item android:id="@id/remove_from_favorite" android:title="@string/deezer_remove_from_favorite" app:showAsAction="never" />
    <item android:id="@id/add_to_playlist" android:title="@string/deezer_add_to_playlist" app:showAsAction="never" />
    <item android:id="@id/remove_from_playlist" android:title="@string/delete_playlist" app:showAsAction="never" />
    <item android:id="@id/add_to_library" android:title="@string/rhapsody_add_to_library" app:showAsAction="never" />
    <item android:id="@id/remove_from_library" android:title="@string/deezer_remove_from_library" app:showAsAction="never" />
    <item android:id="@id/artist_page" android:title="@string/deezer_artist_page" app:showAsAction="never" />
    <item android:id="@id/album_page" android:title="@string/deezer_album_page" app:showAsAction="never" />
</menu>
