<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/setup_background_color" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/proto_header_setup" />
    <android.support.v4.widget.NestedScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:fillViewport="true" android:layout_weight="1.0">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="16.0sp" android:textColor="@color/setup_description_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/setup_sound_bar_hdmi_description_01" />
            <TextView android:textSize="16.0sp" android:textColor="@color/setup_description_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/setup_sound_bar_hdmi_description_02" />
            <TextView android:textSize="13.0sp" android:textColor="@color/text_secondary" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/setup_sound_bar_hdmi_description_03" />
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/wiz_connect_soundbar_hdmi" android:layout_weight="0.5" />
            <TextView android:textSize="16.0sp" android:textColor="@color/setup_description_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip" android:text="@string/setup_sound_bar_common_guide" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    <include layout="@layout/footer_two_button_horizontally" />
</LinearLayout>
