<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/home_scroll" android:background="@color/bg_base" android:scrollbars="none" android:fillViewport="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingTop="14.0dip" android:paddingBottom="28.0dip">

        <!-- Header: settings gear and add-speaker button -->
        <LinearLayout android:orientation="horizontal" android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip">
            <ImageView android:id="@id/home_settings_btn" android:background="@drawable/home_icon_btn_bg" android:clickable="true" android:focusable="true" android:layout_width="42.0dip" android:layout_height="42.0dip" android:padding="10.0dip" android:src="@drawable/ic_toolbar_settings" android:contentDescription="@string/home_settings" />
            <View android:layout_width="0.0dip" android:layout_height="1.0dip" android:layout_weight="1.0" />
            <ImageView android:id="@id/home_add_btn" android:background="@drawable/home_add_btn_bg" android:clickable="true" android:focusable="true" android:layout_width="42.0dip" android:layout_height="42.0dip" android:padding="10.0dip" android:src="@drawable/ic_home_plus" android:contentDescription="@string/home_add_speaker" />
        </LinearLayout>

        <!-- Greeting -->
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="22.0dip" android:layout_marginRight="20.0dip">
            <TextView android:textSize="30.0sp" android:textColor="@color/text_primary" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/home_greet_prefix" />
            <TextView android:textSize="30.0sp" android:textColor="@color/home_greet_accent" android:textStyle="bold" android:id="@id/home_greet_word" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" android:layout_marginLeft="9.0dip" android:singleLine="true" android:ellipsize="end" android:text="@string/home_greet_afternoon" />
        </LinearLayout>
        <TextView android:textSize="14.0sp" android:textColor="@color/text_secondary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="21.0dip" android:layout_marginTop="3.0dip" android:layout_marginRight="20.0dip" android:text="@string/home_greet_sub" />

        <!-- My Speaker -->
        <LinearLayout android:orientation="horizontal" android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="21.0dip" android:layout_marginTop="26.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="12.0dip">
            <TextView android:textSize="16.0sp" android:textColor="@color/text_primary" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/home_my_speaker" />
            <TextView android:textSize="10.0sp" android:textColor="@color/text_primary" android:textStyle="bold" android:gravity="center" android:id="@id/home_speaker_count" android:background="@drawable/home_count_badge" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:minWidth="18.0dip" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:paddingTop="1.0dip" android:paddingBottom="1.0dip" />
        </LinearLayout>

        <LinearLayout android:orientation="vertical" android:id="@id/home_speaker_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" />

        <LinearLayout android:orientation="vertical" android:id="@id/home_speaker_empty" android:background="@drawable/home_np_empty_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:padding="18.0dip">
            <TextView android:textSize="13.0sp" android:textColor="@color/text_secondary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/home_no_speakers" />
        </LinearLayout>

        <!-- Stream Music -->
        <LinearLayout android:orientation="horizontal" android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="21.0dip" android:layout_marginTop="28.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="12.0dip">
            <TextView android:textSize="16.0sp" android:textColor="@color/text_primary" android:textStyle="bold" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" android:text="@string/home_stream_music" />
            <LinearLayout android:orientation="horizontal" android:gravity="center_vertical" android:id="@id/home_see_all" android:clickable="true" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingLeft="6.0dip" android:paddingTop="4.0dip" android:paddingRight="4.0dip" android:paddingBottom="4.0dip">
                <TextView android:textSize="13.0sp" android:textColor="@color/accent_music" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/home_see_all" />
                <ImageView android:layout_width="15.0dip" android:layout_height="15.0dip" android:layout_marginLeft="3.0dip" android:src="@drawable/ic_spk_chevron" android:contentDescription="@string/home_see_all" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip">
            <LinearLayout android:orientation="vertical" android:gravity="center" android:id="@id/home_tile_youtube" android:background="@drawable/home_tile_bg" android:clickable="true" android:focusable="true" android:layout_width="0.0dip" android:layout_height="84.0dip" android:layout_weight="1.0" android:layout_marginRight="4.0dip">
                <ImageView android:layout_width="30.0dip" android:layout_height="30.0dip" android:src="@drawable/ic_home_youtube" android:contentDescription="@string/youtube" />
                <TextView android:textSize="9.5sp" android:textColor="@color/text_primary" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginLeft="1.0dip" android:layout_marginRight="1.0dip" android:singleLine="true" android:ellipsize="end" android:text="@string/youtube" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:gravity="center" android:id="@id/home_tile_youtube_music" android:background="@drawable/home_tile_bg" android:clickable="true" android:focusable="true" android:layout_width="0.0dip" android:layout_height="84.0dip" android:layout_weight="1.0" android:layout_marginLeft="4.0dip" android:layout_marginRight="4.0dip">
                <ImageView android:layout_width="30.0dip" android:layout_height="30.0dip" android:src="@drawable/ic_home_youtube_music" android:contentDescription="@string/youtube_music" />
                <TextView android:textSize="9.5sp" android:textColor="@color/text_primary" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginLeft="1.0dip" android:layout_marginRight="1.0dip" android:singleLine="true" android:ellipsize="end" android:text="@string/youtube_music" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:gravity="center" android:id="@id/home_tile_spotify" android:background="@drawable/home_tile_bg" android:clickable="true" android:focusable="true" android:layout_width="0.0dip" android:layout_height="84.0dip" android:layout_weight="1.0" android:layout_marginLeft="4.0dip" android:layout_marginRight="4.0dip">
                <ImageView android:layout_width="30.0dip" android:layout_height="30.0dip" android:src="@drawable/ic_home_spotify" android:contentDescription="@string/spotify" />
                <TextView android:textSize="9.5sp" android:textColor="@color/text_primary" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginLeft="1.0dip" android:layout_marginRight="1.0dip" android:singleLine="true" android:ellipsize="end" android:text="@string/spotify" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:gravity="center" android:id="@id/home_tile_apple_music" android:background="@drawable/home_tile_bg" android:clickable="true" android:focusable="true" android:layout_width="0.0dip" android:layout_height="84.0dip" android:layout_weight="1.0" android:layout_marginLeft="4.0dip">
                <ImageView android:layout_width="30.0dip" android:layout_height="30.0dip" android:src="@drawable/ic_home_apple_music" android:contentDescription="@string/apple_music" />
                <TextView android:textSize="9.5sp" android:textColor="@color/text_primary" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginLeft="1.0dip" android:layout_marginRight="1.0dip" android:singleLine="true" android:ellipsize="end" android:text="@string/apple_music" />
            </LinearLayout>
        </LinearLayout>

        <!-- Better together promo -->
        <FrameLayout android:id="@id/home_banner" android:background="@drawable/home_banner_bg" android:layout_width="fill_parent" android:layout_height="150.0dip" android:layout_marginLeft="16.0dip" android:layout_marginTop="24.0dip" android:layout_marginRight="16.0dip">
            <View android:layout_gravity="right|center_vertical" android:background="@drawable/home_banner_glow" android:layout_width="150.0dip" android:layout_height="150.0dip" />
            <ImageView android:layout_gravity="right|bottom" android:id="@id/home_banner_art" android:layout_width="215.0dip" android:layout_height="80.0dip" android:layout_marginBottom="20.0dip" android:scaleType="fitEnd" android:adjustViewBounds="false" android:src="@drawable/img_home_soundbar" android:contentDescription="@string/home_banner_title" />
            <LinearLayout android:orientation="vertical" android:layout_gravity="left|center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="18.0dip" android:layout_marginRight="8.0dip">
                <TextView android:textSize="10.0sp" android:textColor="@color/text_secondary" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/home_banner_kicker" />
                <TextView android:textSize="17.0sp" android:textColor="@color/text_primary" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:text="@string/home_banner_title" />
                <TextView android:textSize="17.0sp" android:textColor="@color/text_primary" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/home_banner_title2" />
                <TextView android:textSize="12.0sp" android:textColor="@color/text_secondary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:text="@string/home_banner_sub" />
            </LinearLayout>
        </FrameLayout>

    </LinearLayout>
</ScrollView>
