<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="right|top" android:layout_gravity="right|top" android:orientation="horizontal" android:id="@id/playback_overflow_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/playback_panel_progress_margin_side" android:layout_marginRight="@dimen/playback_panel_progress_margin_side" android:layout_marginBottom="13.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageButton android:layout_gravity="right" android:id="@id/playback_thumbup_btn" android:background="@android:color/transparent" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="23.0dip" android:src="@drawable/playback_thumbup_btn" android:contentDescription="@string/label_like" />
    <ImageButton android:layout_gravity="right" android:id="@id/playback_thumbdown_btn" android:background="@android:color/transparent" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="23.0dip" android:src="@drawable/playback_thumbdown_btn" android:contentDescription="@string/label_dislike" />
    <ImageButton android:layout_gravity="right" android:id="@id/playback_favorite_btn" android:background="@android:color/transparent" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="23.0dip" android:src="@drawable/playback_favorite_btn" android:contentDescription="@string/label_add_favorite" />
    <ImageButton android:layout_gravity="right" android:id="@id/playback_add_btn" android:background="@android:color/transparent" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="23.0dip" android:src="@drawable/playback_add_btn" android:contentDescription="@string/label_add_to_playlist" />
    <ImageButton android:layout_gravity="right" android:id="@id/playback_edit_cue" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/playback_edit_cue" />
</LinearLayout>
